# crews

latest_ai_development/: .mock-env  pyproject.toml  report.md
latest_ai_development/src/latest_ai_development/: crew.py  main.py
latest_ai_development/src/latest_ai_development/tools/: custom_tool.py
trip_planner/: pyproject.toml
trip_planner/src/trip_planner/: crew.py  main.py
trip_planner/src/trip_planner/tools/: custom_tool.py
