[project]
name = "trip_planner"
version = "0.1.0"
description = "trip_planner using crewAI"
authors = [{ name = "cgrx"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "ruff==0.12.9",
]

[project.scripts]
trip_planner = "trip_planner.main:run"
run_crew = "trip_planner.main:run"
train = "trip_planner.main:train"
replay = "trip_planner.main:replay"
test = "trip_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
]
